--- a/style.css
+++ b/style.css
@@ -80,6 +80,14 @@ body {
   margin-bottom: 12px;
 }
 
+ background-image: url("/20Years.png");
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
 #myUL {
   list-style-type: none;
   padding: 0;
